# libudev-fbsd

./: CMakeLists.txt
include/linux/: input.h  types.h
include/linux/autogen/: input.h
include/linux/mouse/: psmouse.h
src/: CMakeLists.txt  libudev.c  libudev.h  pkg-config.pc.cmake  udev_test.c
